--- a/cv.Rmd
+++ b/cv.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Nick Strayer's CV"
-author: Nick Strayer
+title: "Freddie Heathers's CV"
+author: Freddie Heather
 date: "`r Sys.Date()`"
 params:
   pdf_mode:
@@ -24,7 +24,7 @@ source("cv_printing_functions.r")
 
 # Read in all data and initialize a CV printer object
 # CV <- create_CV_object(
-#   data_location = "https://docs.google.com/spreadsheets/d/14MQICF2F8-vf8CKPF1m4lyGKO6_thG-4aSwat1e2TWc",  
+#   data_location = "https://docs.google.com/spreadsheets/d/1LsW0_ItGjS2JQNMmwKLBfb3PvCXXPs-jOg_6fOf_i4g/edit#gid=917338460",
 #   pdf_mode = params$pdf_mode,
 #   cache_data = params$cache_data
 # )
@@ -58,11 +58,11 @@ datadrivencv::build_network_logo(CV$entries_data)
 
 
 ```{r}
-if(params$pdf_mode){
-  cat("View this CV online with links at _nickstrayer.me/cv/_")
-} else {
-  cat("[<i class='fas fa-download'></i> Download a PDF of this CV](https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf)")
-}
+# if(params$pdf_mode){
+#   cat("View this CV online with links at _freddieheather.me/cv/_")
+# } else {
+  cat("[<i class='fas fa-download'></i> Download a PDF of this CV](https://github.com/freddiejh/cv/raw/master/heather_cv.pdf)")
+# }
 ```
 
 Contact {#contact}
@@ -74,7 +74,7 @@ CV %>% print_contact_info()
 
 
 
-Language Skills {#skills}
+Specific Skills {#skills}
 --------------------------------------------------------------------------------
 
 ```{r}
@@ -88,7 +88,7 @@ Disclaimer {#disclaimer}
 
 Made with the R package [**pagedown**](https://github.com/rstudio/pagedown). 
 
-The source code is available [on github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+The source code is available [on github.com/freddiejh/cv](https://github.com/freddiejh/cv).
 
 Last updated on `r Sys.Date()`.
 
@@ -97,7 +97,7 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Freddie Heather {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
@@ -152,43 +152,43 @@ CV %<>% print_section('teaching_positions')
 
 
 
-Selected Data Science Writing {data-icon=chart-line}
---------------------------------------------------------------------------------
+<!-- Selected Data Science Writing {data-icon=chart-line} -->
+<!-- -------------------------------------------------------------------------------- -->
 
-::: aside
-```{r}
-CV %<>% print_text_block('data_science_writing_aside')
-```
-:::
+<!-- ::: aside -->
+<!-- ```{r} -->
+<!-- CV %<>% print_text_block('data_science_writing_aside') -->
+<!-- ``` -->
+<!-- ::: -->
 
-```{r}
-CV %<>% print_section('data_science_writings')
-```
-
-
-
-Selected Press (About)  {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-```{r}
-CV %<>% print_section('about_me_press')
-```
-
-
-<br>
-<br>
-
-
-Selected Press (By)  {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-```{r}
-CV %<>% print_section('by_me_press')
-```
+<!-- ```{r} -->
+<!-- CV %<>% print_section('data_science_writings') -->
+<!-- ``` -->
 
 
 
-Selected Publications, Posters, and Talks {data-icon=book}
+<!-- Selected Press (About)  {data-icon=newspaper} -->
+<!-- -------------------------------------------------------------------------------- -->
+
+<!-- ```{r} -->
+<!-- CV %<>% print_section('about_me_press') -->
+<!-- ``` -->
+
+
+<!-- <br> -->
+<!-- <br> -->
+
+
+<!-- Selected Press (By)  {data-icon=newspaper} -->
+<!-- -------------------------------------------------------------------------------- -->
+
+<!-- ```{r} -->
+<!-- CV %<>% print_section('by_me_press') -->
+<!-- ``` -->
+
+
+
+Selected Publications {data-icon=book}
 --------------------------------------------------------------------------------
 
 ```{r}
