--- a/resume.Rmd
+++ b/resume.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Nick Strayer's Resume"
+title: Freddie Heathers's Resume"
 author: Nick Strayer
 date: "`r Sys.Date()`"
 output:
@@ -27,7 +27,7 @@ library(glue)
 using_googlesheets <- TRUE
 
 # Just the copied URL from the sheet
-positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/14MQICF2F8-vf8CKPF1m4lyGKO6_thG-4aSwat1e2TWc"
+positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/1LsW0_ItGjS2JQNMmwKLBfb3PvCXXPs-jOg_6fOf_i4g/edit?usp=sharing"
 
 # Is this sheet available for anyone to read? If you're using a private sheet
 # set this to false and go to gather_data.R and run the data loading manually
@@ -109,7 +109,7 @@ All projects available at `github.com/nstrayer/<name>`
 More info {#more-info}
 --------------------------------------------------------------------------------
 
-See full CV at nickstrayer.me/cv for more complete list of positions and publications.
+See full CV at freddieheather.me/cv for more complete list of positions and publications.
 
 
 Disclaimer {#disclaimer}
@@ -117,7 +117,7 @@ Disclaimer {#disclaimer}
 
 Made w/ [**pagedown**](https://github.com/rstudio/pagedown). 
 
-Source code: [github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+Source code: [github.com/freddiejh/cv](https://github.com/freddiejh/cv).
 
 Last updated on `r Sys.Date()`.
 
@@ -126,7 +126,7 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Freddie Heather {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
